# SPM4650_PI_PICO

./: .gitignore  CMakeLists.txt  README.md  main.c  spm_srxl_config.h
lib/: CMakeLists.txt
lib/spm4650/: CMakeLists.txt
lib/spm4650/include/haw/: spm_srxl.h
lib/spm4650/src/: CMakeLists.txt  spm_srxl.c
